Add html skeleton

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,36 @@
   <title>LeaderBoard App</title>
 </head>
 <body>
+  <main class="content">
+    <h1>Hello LeaderBoard!</h1>
+    <div class="maint-container">
+      <div class="recent-scores">
+        <div class="title">
+          <h2>Recent scores</h2>
+          <button>Refresh</button>
+        </div>
+        <ul class="players">
+          <li>Name: 100</li>
+          <li>Name: 20</li>
+          <li>Name: 50</li>
+          <li>Name: 78</li>
+          <li>Name: 125</li>
+          <li>Name: 77</li>
+          <li>Name: 42</li>
+        </ul>
+      </div>
+      <div class="add-your-score">
+        <h2>Add your Score</h2>
+        <form action="">
+          <input type="text" placeholder="Your name">
+          <input type="text" placeholder="Your score">
+          <button type="submit">Submit</button>
+        </form>
+
+      </div>
+    </div>
+    
+  </main>
   <h1>Hello LeaderBoard!</h1>
 </body>
 </html>
