--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
 <body>
   <main class="content">
     <h1>Hello LeaderBoard!</h1>
-    <div class="maint-container">
+    <div class="main-container">
       <div class="recent-scores">
         <div class="title">
-          <h2>Recent scores</h2>
-          <button>Refresh</button>
+          <h2 class="recent">Recent scores</h2>
+          <button class="refresh-btn ">Refresh</button>
         </div>
         <ul class="players">
           <li>Name: 100</li>
@@ -25,18 +25,19 @@
           <li>Name: 42</li>
         </ul>
       </div>
+
       <div class="add-your-score">
         <h2>Add your Score</h2>
         <form action="">
           <input type="text" placeholder="Your name">
           <input type="text" placeholder="Your score">
-          <button type="submit">Submit</button>
+          <button class="btn" type="submit">Submit</button>
         </form>
-
       </div>
+
     </div>
     
   </main>
-  <h1>Hello LeaderBoard!</h1>
+
 </body>
 </html>
