--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main class="content">
-    <h1>Hello LeaderBoard!</h1>
+    <h1>LeaderBoard!</h1>
     <div class="main-container">
       <div class="recent-scores">
         <div class="title">
