--- a/src/index.html
+++ b/src/index.html
@@ -16,22 +16,16 @@
           <button class="refresh-btn ">Refresh</button>
         </div>
         <ul class="players">
-          <li>Name: 100</li>
-          <li>Name: 20</li>
-          <li>Name: 50</li>
-          <li>Name: 78</li>
-          <li>Name: 125</li>
-          <li>Name: 77</li>
-          <li>Name: 42</li>
+
         </ul>
       </div>
 
       <div class="add-your-score">
         <h2>Add your Score</h2>
         <form action="">
-          <input type="text" placeholder="Your name">
-          <input type="text" placeholder="Your score">
-          <button class="btn" type="submit">Submit</button>
+          <input type="text" id="playerName" placeholder="Your name">
+          <input type="text" id="playerScore" placeholder="Your score">
+          <button class="btn" id="addScore"  type="submit">Submit</button>
         </form>
       </div>
 
