Remove h2:recent scores and refresh button to the top of the card

--- a/src/index.html
+++ b/src/index.html
@@ -8,27 +8,29 @@
 </head>
 <body>
   <main class="content">
-    <h1>LeaderBoard!</h1>
+    <h1>LeaderBoard!</h1> 
     <div class="main-container">
-      <div class="recent-scores">
+      <div class="left-side">
         <div class="title">
           <h2 class="recent">Recent scores</h2>
           <button class="refresh-btn ">Refresh</button>
         </div>
-        <ul class="players">
-
-        </ul>
+        <div class="recent-scores">
+          <ul class="players">
+  
+          </ul>
+        </div>
       </div>
-
-      <div class="add-your-score">
+      <div class="right-side">
         <h2>Add your Score</h2>
-        <form action="">
-          <input type="text" id="playerName" placeholder="Your name">
-          <input type="text" id="playerScore" placeholder="Your score">
-          <button class="btn" id="addScore"  type="submit">Submit</button>
-        </form>
+        <div class="add-your-score">          
+          <form action="">
+            <input type="text" id="playerName" placeholder="Your name">
+            <input type="text" id="playerScore" placeholder="Your score">
+            <button class="btn" id="addScore"  type="submit">Submit</button>
+          </form>
+        </div>
       </div>
-
     </div>
     
   </main>
